vfs_fruit: add option "nfs_aces" that controls the NFS ACEs stuff

Bug: https://bugzilla.samba.org/show_bug.cgi?id=11213

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>
(cherry picked from commit 1b8a0e6a26bc212905a160c32b936ef0ea24c0b2)